syntax = "proto3";

package datasource;

option go_package= "data-service/datasource";

// 数据源服务，提供连接和数据读取功能
service DataSourceService {
  // 读取数据
  rpc ReadData (ReadRequest) returns (Response);
}


// 连接响应，返回连接成功与否的信息
message Response {
  bool success = 1;    // 是否成功连接
  string message = 2;  // 错误或成功信息
}

// 数据读取请求，包含查询条件或读取参数
message ReadRequest {
  string clientId = 1; // 客户端id
  string minioServer = 2;
  string minioPort = 3;
  string minioAK = 4;
  string minioSK = 5;
  ConnectionInfo connection = 8; // 数据库连接信息
}

message ConnectionInfo {
  string dbtype = 1; //数据库类型
  string host = 2; // 数据库地址
  string port = 3; // 数据库端口
  string user = 4; // 数据库用户名
  string password = 5; // 数据库密码
  string query = 6; // 查询语句或读取指令
}

